# Autochroma

./: .env  .gitignore  Cargo.toml  README.md  devenv.nix
.github/: renovate.json
.github/workflows/: cargo.yml
.sqlx/: query-07db2fe7b958b09a4e8ccdc0a41c6acae881fe758a9bfb223d88615afbe1e49a.json  query-7ef5e0430b23c0caec57cc9936c8ef41dd16f00c2fc0c28b122e9cb511804331.json  query-9a8521f029837a10a7a5132d17eee4c81cf4e496f470107fc80065252913da02.json  query-e122c2865c8559646746f8903880391f80519c32614580de362d6b6586a0e052.json
migrations/: 1_Initial.sql
src/: commands.rs  id.rs  main.rs
src/modules/: mod.rs  nom.rs  test.rs
