[package]
name = "autochroma"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
image = "0.24.9"
imageproc = "0.23.0"
log = "0.4.21"
once_cell = "1.19.0"
poise = "0.5.7"
thiserror = "1.0.58"

hocon = { version = "0.9.0", features = [ "serde-support" ] }
serde = { version = "1.0.197", features = [ "derive" ] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.36.0", features = [ "full" ] }
