[package]
name = "autochroma"
version = "0.2.0"
edition = "2021"

[dependencies]
# image = "0.25"
# imageproc = "0.25"
# once_cell = "1"

env_logger = "0.11"
log = "0.4"
poise = "0.6"
thiserror = "1"

clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["derive", "postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
